code cleanup, moving all logic from controllers to services